@@ -15,12 +15,8 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraftforge.common.IForgeShearable;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class LuaConverter {
@@ -84,8 +80,9 @@ public class LuaConverter {
 
     /**
      * Returns the stack but with a slot entry. Used to prevent zero indexed tables
+     *
      * @param stack the item stack
-     * @param slot the slot of the item
+     * @param slot  the slot of the item
      * @return a Map containing proper item stack details
      * @see InventoryManagerPeripheral#getItems()
      */
@@ -104,8 +101,8 @@ public class LuaConverter {
     }
 
     public static <T> List<String> tagsToList(@NotNull Supplier<Stream<TagKey<T>>> tags) {
-        if (tags.get().findAny().isEmpty()) return null;
-        return tags.get().map(LuaConverter::tagToString).collect(Collectors.toList());
+        if (tags.get().findAny().isEmpty()) return Collections.emptyList();
+        return tags.get().map(LuaConverter::tagToString).toList();
     }
 
     public static <T> String tagToString(@NotNull TagKey<T> tag) {
